--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "author": "Steven Kalt <kalt.steven@gmail.com>",
   "license": "UNLICENSED",
   "private": true,
+  "scripts": {
+    "format": "prettier"
+  },
   "devDependencies": {
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "prettier": "^2.0.5"
   }
 }
