--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "format": "prettier"
+    "format": "prettier --write ./src"
   },
   "devDependencies": {
     "parcel": "^1.12.4",
