feat: added alias for server

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": true,
   "scripts": {
     "format": "prettier --write ./src",
-    "serve": "parcel ./src/index.html"
+    "serve": "parcel ./src/index.html",
+    "start": "parcel ./src/index.html"
   },
   "devDependencies": {
     "parcel": "^1.12.4",
