--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "private": true,
   "scripts": {
     "format": "prettier --write ./src",
-    "serve": "parcel ./src/index.html",
-    "start": "parcel ./src/index.html"
+    "start": "parcel watch ./src/index.html"
   },
   "devDependencies": {
     "parcel": "^1.12.4",
