--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "parcel": "^1.12.4",
     "prettier": "^2.0.5"
+  },
+  "dependencies": {
+    "d3": "^5.16.0"
   }
 }
